modified:   apps/api/src/core/clientes/clientes.controller.ts 	modified:   apps/api/src/core/clientes/clientes.service.ts 	modified:   apps/web/src/pages/Clientes.tsx 	modified:   docs/estado-proyecto.md 	modified:   docs/integraciones/manual-api-clientes.md 	modified:   docs/openapi.yaml 	modified:   packages/shared/tsconfig.tsbuildinfo
